--- a/src/app/components/create-movie/create-movie.component.html
+++ b/src/app/components/create-movie/create-movie.component.html
@@ -50,16 +50,25 @@
       <mat-label>cover</mat-label>
       <input matInput placeholder="cover" formControlName="cover" />
     </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Abertura</mat-label>
+      <textarea
+        matInput
+        placeholder="Abertura"
+        formControlName="opening_crawl"
+      ></textarea>
+    </mat-form-field>
   </form>
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancelar</button>
   <button
-    mat-button 
+    mat-button
     cdkFocusInitial
     (click)="createMovie()"
+    [attr.aria-label]="data ? 'Editar' : 'Criar'"
   >
-    Criar
+    {{ data ? "Editar" : "Criar" }}
   </button>
 </mat-dialog-actions>
