--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,31 @@ body {
 .mat-drawer-backdrop.mat-drawer-shown {
   background-color: rgba(0, 0, 0, 0.6);
 }
+
+.snackbar-background {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: $primary-color;
+}
+
+.full-modal {
+  &.planet {
+    max-width: 100vw !important;
+    .mat-dialog-actions {
+      z-index: 99;
+    }
+  }
+  @media screen and (max-width: 850px) {
+    max-width: 100vw !important;
+  }
+  .mat-dialog-container {
+    background-color: rgba(0, 0, 0, 0.8) !important;
+    height: 100%;
+  }
+  .mat-dialog-content {
+    max-height: 100% !important;
+    flex: 1;
+  }
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
