--- a/src/app/components/movie-detail/movie-detail.component.html
+++ b/src/app/components/movie-detail/movie-detail.component.html
@@ -18,5 +18,7 @@
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close aria-label="Fechar modal de detalhes">Fechar</button>
+  <button mat-button mat-dialog-close aria-label="Fechar modal de detalhes">
+    Fechar
+  </button>
 </mat-dialog-actions>
