--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,13 +7,24 @@
   <form class="mt-3" [formGroup]="loginForm" (submit)="login()">
     <mat-form-field appearance="outline">
       <mat-label>Usuário</mat-label>
-      <input matInput placeholder="Usuário" formControlName="username" />
+      <input
+        matInput
+        placeholder="Entre com qualquer usuário"
+        formControlName="username"
+      />
       <mat-hint *ngIf="loginForm.invalid && isInvalid"
         >Usuário é obrigatório!</mat-hint
       >
     </mat-form-field>
   </form>
-  <button mat-stroked-button color="primary" (click)="login()" style="margin-top: 5px;">Entrar</button>
+  <button
+    mat-stroked-button
+    color="primary"
+    (click)="login()"
+    style="margin-top: 5px"
+  >
+    Entrar
+  </button>
 </div>
 <div class="starwars-logo">
   <img src="assets/images/star.svg" alt="Star" class="star img-fluid" />
